# music-tagger

./: Dockerfile  README.md  main.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
artist/: Aqu3ra.ipynb  HACHI.ipynb  Hyo Hanabasami.ipynb  Luna.ipynb  Sheeno Mirin.ipynb  Traumend-Intermezzo.ipynb  UVERworld.ipynb  ponzu.ipynb  wolFer.ipynb
music_tagger/: _utils.py  music_tagger.py
music_tagger/agents/: chain.py  llm.py  prompts.py  tool.py
music_tagger/utils/: config.py  utils.py
scripts/: main.ipynb  main_2.ipynb
