[tool.poetry]
name = "music-tagger"
version = "0.1.0"
description = "Music tagger"
authors = ["alchemine <djyoon0223@gmail.com>"]
readme = "README.md"
packages = [{include = "music_tagger"}]

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.4"
mutagen = "^1.47.0"
langchain = "^0.2.1"
langchain-openai = "^0.1.8"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
